# pxls

./: .gitignore  Cargo.toml  bench_cli.sh  convert_video.sh
src/: cli.rs  gui.rs  lib.rs  logic.rs  main.rs
src/gui/: worker_thread.rs
