[package]
name = "pxls"
description = "A library for pixelising images"
authors = ["Jack Maguire <jack@maguire.tech>"]
license = "MIT"
repository = "https://github.com/BurntNail/pxls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["image"] }
image = { version = "0.25.5", features = ["jpeg"] }
rfd = "0.15.2"

# [profile.release]
# debug = true
