[package]
name = "pxls"
description = "A library for pixelising images"
authors = ["Jack Maguire <jack@maguire.tech>"]
license = "MIT"
repository = "https://github.com/BurntNail/pxls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
eframe = { version = "0.30.0", features = ["persistence"] }
egui = "0.30.0"
image = "0.25.5"
rfd = "0.15.2"
serde_json = "1.0.138"

# [profile.release]
# debug = true
